--- a/example/FILE_DOWNLOAD/CMakeLists.txt
+++ b/example/FILE_DOWNLOAD/CMakeLists.txt
@@ -7,7 +7,7 @@ FIND_PACKAGE(CMLIB)
 SET(VALID_HTTP_URI           "http://cmake.org/")
 SET(VALID_HTTP_CMAKE_URI     "https://github.com/Kitware/CMake/releases/download/v3.18.5/cmake-3.18.5-win64-x64.zip")
 SET(VALID_GIT_URI            "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
-SET(VALID_GIT_FILE_PATH      "cmake/UTILS.cmake")
+SET(VALID_GIT_FILE_PATH      "cmake/README.txt")
 SET(VALID_GIT_DIRECTORY_PATH "cmake/")
 
 
