--- a/test/COMPONENT/CMakeLists.txt
+++ b/test/COMPONENT/CMakeLists.txt
@@ -9,9 +9,24 @@ IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
 ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
+
+SET(components CMDEF STORAGE CMUTIL)
+
 FIND_PACKAGE(CMLIB
-	COMPONENTS BASEDEF
+	COMPONENTS ${components}
 )
+
+FIND_PACKAGE(CMLIB
+	COMPONENTS ${components}
+)
+
+LIST(POP_FRONT components)
+
+FIND_PACKAGE(CMLIB
+	COMPONENTS ${components}
+)
+
+CMUTIL_VERSION_SPLIT(outvar 1.4.3)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
