--- a/test/DEPENDENCY/argument_missing/CMakeLists.txt
+++ b/test/DEPENDENCY/argument_missing/CMakeLists.txt
@@ -18,9 +18,7 @@ ENDIF()
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../")
 FIND_PACKAGE(CMLIB)
 
-GET_FILENAME_COMPONENT(base_url "${CMLIB_REQUIRED_ENV_REMOTE_URL}" DIRECTORY)
-
-SET(GIT_DOWNLOAD_URI "${base_url}/cmakelib-test.git")
+SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 #
 # Download zip as FILE
