--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,41 +13,49 @@ jobs:
   test_linux:
     strategy:
       matrix:
-        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804"]
+        image: ["latest-debian-bullseye", "latest-ubuntu-2004", "latest-ubuntu-2204"]
     runs-on: ubuntu-latest
     container:
-        image: cmakelib/build-linux:${{ matrix.image }}
+        image: koudis/cmakelib-build-linux:${{ matrix.image }}
     steps:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Run tests
         run: |
+            git config --global --add safe.directory "$(pwd)"
+            git remote set-url origin "${{ github.server_url }}/${{ github.repository }}"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
   test_linux_script:
     strategy:
       matrix:
-        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804"]
+        image: ["latest-debian-bullseye", "latest-ubuntu-2004", "latest-ubuntu-2204"]
     runs-on: ubuntu-latest
     container:
-        image: cmakelib/build-linux:${{ matrix.image }}
+        image: koudis/cmakelib-build-linux:${{ matrix.image }}
     steps:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Run tests
         run: |
+            git config --global --add safe.directory "$(pwd)"
+            git remote set-url origin "${{ github.server_url }}/${{ github.repository }}"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_macos_11:
@@ -56,11 +64,13 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Run tests
         run: cd test && cmake -DCMLIB_DEBUG=ON .
 
@@ -70,11 +80,13 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Run tests
         run: cd test && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
@@ -84,11 +96,13 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Run tests
         run: cd test/ && cmake -DCMLIB_DEBUG=ON .
 
@@ -98,11 +112,13 @@ jobs:
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
+          known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
       - name: Run tests
         run: cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
   
