--- a/test/DEPENDENCY/cache_control/keywords_with_diff_revision/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/keywords_with_diff_revision/CMakeLists.txt
@@ -1,8 +1,10 @@
 ## Main
 #
-# Check if DEPENDENCY emit and error if
-# we try to add same resurce as a DEPENDENCY
-# under multiple keywords
+# Check if DEPENDENCY emit an error if
+# we try to add same file with same KEYWORDS
+# and different GIT_REVISION
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -18,6 +20,7 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 
 CMLIB_DEPENDENCY(
+	KEYWORDS GIT ZIP FILE
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
@@ -26,10 +29,10 @@ CMLIB_DEPENDENCY(
 )
 
 CMLIB_DEPENDENCY(
+	KEYWORDS GIT ZIP FILE
 	TYPE FILE
-	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
+
