--- a/test/DEPENDENCY/duplicated_dependency/same_remote_without_keywords/CMakeLists.txt
+++ b/test/DEPENDENCY/duplicated_dependency/same_remote_without_keywords/CMakeLists.txt
@@ -27,7 +27,7 @@ CMLIB_DEPENDENCY(
 CMLIB_DEPENDENCY(
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "test-branch"
+	GIT_REVISION "master"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
