--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -184,8 +184,10 @@ ENDFUNCTION()
 
 
 
-DEPENDENCY_HTTP_DOWNLOAD()
-DEPENDENCY_GIT_DOWNLOAD(ON)
-DEPENDENCY_GIT_DOWNLOAD(OFF)
-DEPENDENCY_INVALID_ARGUMENTS()
-DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
+#DEPENDENCY_HTTP_DOWNLOAD()
+#DEPENDENCY_GIT_DOWNLOAD(ON)
+#DEPENDENCY_GIT_DOWNLOAD(OFF)
+#DEPENDENCY_INVALID_ARGUMENTS()
+#DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
+
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/duplicated_dependency")
