Component UTIL renamed to CMUTIL

--- a/test/COMPONENT/CMakeLists.txt
+++ b/test/COMPONENT/CMakeLists.txt
@@ -10,7 +10,7 @@ ENDIF()
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
 FIND_PACKAGE(CMLIB
-	COMPONENTS BASEDEF
+	COMPONENTS CMDEF CMUTIL STORAGE
 )
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
