--- a/test/DEPENDENCY/duplicated_dependency/CMakeLists.txt
+++ b/test/DEPENDENCY/duplicated_dependency/CMakeLists.txt
@@ -15,18 +15,21 @@ FIND_PACKAGE(CMLIB)
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")
 
 SET(keywords_expected_errmsg
-	"DEPENDENCY hash mishmash - cached keywords 'GIT|ZIP|FILE' are not same as\n *required keywords 'GIT|ZIP|FILE3'")
+	"DEPENDENCY hash mishmash - cached keywords 'GIT;ZIP;FILE' are not same as\n *required keywords 'GIT;ZIP;FILE3'")
 
 SET(mixed_keywords_first_expected_errmsg
-	"DEPENDENCY hash mishmash - cache created with keywords A|B|C but no\n *keywords provided")
+	"DEPENDENCY hash mishmash - cache created with keywords A;B;C but no\n *keywords provided")
 
 SET(mixed_no_keywords_first_expected_errmsg
-	"DEPENDENCY hash mishmash - cache created without keywords but keywords\n *provided 'A|B|C'")
+	"DEPENDENCY hash mishmash - cache created without keywords but keywords\n *provided 'A;B;C'")
 
 SET(keywords_with_different_remote_expected_msg 
-	"The cache under keywords 'A|B|C' already exist for different remote")
+	"The cache under keywords 'A;B;C' already exist for different remote")
 
 SET(keywords_with_different_revision_expected_msg 
+	"DEPENDENCY version mishmash - different versions of the same file\n *'test-branch' vs 'master'")
+
+SET(same_remote_without_keywords_expected_msg 
 	"DEPENDENCY version mishmash - different versions of the same file\n *'test-branch' vs 'master'")
 
 TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords"
@@ -39,5 +42,5 @@ TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords_with_different_remote
 	"${keywords_with_different_remote_expected_errmsg}")
 TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/keywords_with_different_revision"
 	"${keywords_with_different_revision_expected_errmsg}")
-
-TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/same_remote_without_keywords")
+TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/same_remote_without_keywords"
+	"${same_remote_without_keywords_expected_msg}")
