--- a/test/DEPENDENCY/duplicated_dependency/keywords_with_diff_remote/CMakeLists.txt
+++ b/test/DEPENDENCY/duplicated_dependency/keywords_with_diff_remote/CMakeLists.txt
@@ -29,7 +29,7 @@ CMLIB_DEPENDENCY(
 	TYPE FILE
 	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "test-branch"
+	GIT_REVISION "master"
 	GIT_PATH     "README.md"
 	OUTPUT_PATH_VAR output_path
 )
