--- a/test/DEPENDENCY/cache_control/keywords_with_diff_remote/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/keywords_with_diff_remote/CMakeLists.txt
@@ -1,8 +1,9 @@
 ## Main
 #
-# Check if DEPENDENCY emit and error if
-# we try to add same resurce under explicit keywords and
-# without explicit keywords
+# Check if DEPENDENCY emit an error if we
+# try to add different remotes under same keyword set
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -19,6 +20,7 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 CMLIB_DEPENDENCY(
 	TYPE FILE
+	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
@@ -29,7 +31,8 @@ CMLIB_DEPENDENCY(
 	TYPE FILE
 	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "test-branch"
-	GIT_PATH     "TEST_MODULE.cmake"
+	GIT_REVISION "master"
+	GIT_PATH     "README.md"
 	OUTPUT_PATH_VAR output_path
 )
+
