--- a/test/DEPENDENCY/cache_control/mixed_keywords_first/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/mixed_keywords_first/CMakeLists.txt
@@ -1,7 +1,10 @@
 ## Main
 #
-# Check if DEPENDENCY emit an error if we
-# try to add different remotes - same URI different revision.
+# Check if DEPENDENCY emit and error if
+# we try to add same resurce as a DEPENDENCY
+# under multiple keywords and remote.
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -18,6 +21,7 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 CMLIB_DEPENDENCY(
 	TYPE FILE
+	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
@@ -27,8 +31,14 @@ CMLIB_DEPENDENCY(
 CMLIB_DEPENDENCY(
 	TYPE FILE
 	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "master"
+	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
 
+CMLIB_DEPENDENCY(
+	TYPE FILE
+	URI "${GIT_DOWNLOAD_URI}"
+	GIT_PATH     "TEST_MODULE.cmake"
+	OUTPUT_PATH_VAR output_path
+)
