--- a/test/DEPENDENCY/cache_control/mixed_no_keywords_first/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/mixed_no_keywords_first/CMakeLists.txt
@@ -1,8 +1,10 @@
 ## Main
 #
 # Check if DEPENDENCY emit and error if
-# we try to add same resurce as a DEPENDENCY
-# under multiple keywords and remote.
+# we try to add same resurce under explicit keywords and
+# without explicit keywords
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -19,24 +21,17 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 CMLIB_DEPENDENCY(
 	TYPE FILE
+	URI "${GIT_DOWNLOAD_URI}"
+	GIT_REVISION "test-branch"
+	GIT_PATH     "TEST_MODULE.cmake"
+	OUTPUT_PATH_VAR output_path
+)
+
+CMLIB_DEPENDENCY(
+	TYPE FILE
 	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
-	GIT_PATH     "TEST_MODULE.cmake"
-	OUTPUT_PATH_VAR output_path
-)
-
-CMLIB_DEPENDENCY(
-	TYPE FILE
-	URI "${GIT_DOWNLOAD_URI}"
-	GIT_REVISION "test-branch"
-	GIT_PATH     "TEST_MODULE.cmake"
-	OUTPUT_PATH_VAR output_path
-)
-
-CMLIB_DEPENDENCY(
-	TYPE FILE
-	URI "${GIT_DOWNLOAD_URI}"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
