--- a/test/DEPENDENCY/cache_control/same_file_diff_revision/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/same_file_diff_revision/CMakeLists.txt
@@ -1,7 +1,9 @@
 ## Main
 #
 # Check if DEPENDENCY emit an error if we
-# try to add different remotes under same keyword set
+# try to add different remotes - same URI different revision.
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -18,7 +20,6 @@ SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 CMLIB_DEPENDENCY(
 	TYPE FILE
-	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
@@ -27,10 +28,9 @@ CMLIB_DEPENDENCY(
 
 CMLIB_DEPENDENCY(
 	TYPE FILE
-	KEYWORDS A B C
 	URI "${GIT_DOWNLOAD_URI}"
 	GIT_REVISION "master"
-	GIT_PATH     "README.md"
+	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
 
