--- a/test/DEPENDENCY/cache_control/keywords/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/keywords/CMakeLists.txt
@@ -1,7 +1,10 @@
 ## Main
 #
-# Check if DEPENDENCY emit and error if
-# we try to add same file from defferent remotes
+# Check if DEPENDENCY emit an error if
+# we try to add same resource as a DEPENDENCY
+# under multiple keywords
+#
+# TEST must FAIL
 #
 
 IF(NOT  DEFINED CMAKE_SCRIPT_MODE_FILE)
@@ -12,21 +15,24 @@ ENDIF()
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../")
 FIND_PACKAGE(CMLIB)
 
-SET(GIT_DOWNLOAD_URI_A "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
-SET(GIT_DOWNLOAD_URI_B "https://gitlab.com/cmakelib/cmakelib-test.git")
+SET(GIT_DOWNLOAD_URI "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
 
 
 
 CMLIB_DEPENDENCY(
+	KEYWORDS GIT ZIP FILE
 	TYPE FILE
-	URI "${GIT_DOWNLOAD_URI_A}"
+	URI "${GIT_DOWNLOAD_URI}"
+	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
 
 CMLIB_DEPENDENCY(
+	KEYWORDS GIT ZIP FILE3
 	TYPE FILE
-	URI "${GIT_DOWNLOAD_URI_B}"
+	URI "${GIT_DOWNLOAD_URI}"
+	GIT_REVISION "test-branch"
 	GIT_PATH     "TEST_MODULE.cmake"
 	OUTPUT_PATH_VAR output_path
 )
