--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -162,6 +162,23 @@ FUNCTION(DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS)
 	TEST_VAR_NOT_EQUAL(path_var_zip2 path_var_zip3)
 ENDFUNCTION()
 
+FUNCTION(DEPENDENCY_CHECK_CACHE_AND_GET_BY_KEYWORDS)
+	CMLIB_DEPENDENCY(
+		KEYWORDS HTTP GET BY KEYWORDS
+		TYPE FILE
+		URI "${HTTP_DOWNLOAD_URI_ZIP}"
+		OUTPUT_PATH_VAR  output_path
+	)
+
+	CMLIB_DEPENDENCY(
+		KEYWORDS HTTP GET BY KEYWORDS
+		TYPE FILE
+		OUTPUT_PATH_VAR output_path2
+	)
+	TEST_VAR_PATH_EXISTS(output_path2)
+	TEST_VAR_EQUAL(output_path output_path2)
+ENDFUNCTION()
+
 FUNCTION(DEPENDENCY_INVALID_ARGUMENTS)
 	TEST_INVALID_CMAKE_RUN("${CMAKE_CURRENT_LIST_DIR}/argument_missing")
 ENDFUNCTION()
@@ -170,8 +187,9 @@ ENDFUNCTION()
 
 DEPENDENCY_HTTP_DOWNLOAD()
 DEPENDENCY_GIT_DOWNLOAD(ON)
-#DEPENDENCY_GIT_DOWNLOAD(OFF)
-#DEPENDENCY_INVALID_ARGUMENTS()
-#DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
+DEPENDENCY_GIT_DOWNLOAD(OFF)
+DEPENDENCY_INVALID_ARGUMENTS()
+DEPENDENCY_CHECK_CACHE_AND_GET_BY_KEYWORDS()
+DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
 
 #TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/duplicated_dependency")
