--- a/test/TEMPLATE/CMakeLists.txt
+++ b/test/TEMPLATE/CMakeLists.txt
@@ -14,9 +14,9 @@ LIST(SORT orig_variable_names)
 LIST(LENGTH orig_variable_names orig_variable_names_size)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../")
-FIND_PACKAGE(CMLIB)
+FIND_PACKAGE(CMLIB COMPONENTS STORAGE)
 
-FIND_PACKAGE(CMLIB_STORAGE)
+#FIND_PACKAGE(CMLIB_STORAGE)
 
 INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../TEST.cmake")
 
