--- a/test/FILE_DOWNLOAD/compute_hash/CMakeLists.txt
+++ b/test/FILE_DOWNLOAD/compute_hash/CMakeLists.txt
@@ -14,6 +14,8 @@ INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")
 
 SET(VALID_GIT_URI         "https://github.com/cmakelib/cmakelib-test.git")
 SET(VALID_GIT_URI_ARCHIVE "git@gitlab.com:cmakelib/cmakelib-test.git")
+SET(GIT_REVISION_PATH_ZIP "cmake-test/test_branch_same/same.zip")
+SET(GIT_REVISION_NAME     "test-branch")
 
 
 
@@ -42,6 +44,30 @@ FUNCTION(DOWNLOAD_AND_COMPARE out_var uri)
     SET(${out_var} ${test_branch_hash})
 ENDFUNCTION()
 
+FUNCTION(DOWNLOAD_AND_COMPARE_DIR_FILE)
+    SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test_branch_same_edge.zip")
+	CMLIB_FILE_DOWNLOAD(
+		URI             "${VALID_GIT_URI}"
+		GIT_PATH        "${GIT_REVISION_PATH_ZIP}"
+		GIT_REVISION    "${GIT_REVISION_NAME}"
+		OUTPUT_PATH     "${output_path}"
+        STATUS_VAR status
+        FILE_HASH_OUTPUT_VAR hash
+	)
+    TEST_VAR_TRUE(status)
+	UNSET(status)
+    SET(output_path "${CMAKE_CURRENT_BINARY_DIR}/test_branch_same_edge2.zip")
+	CMLIB_FILE_DOWNLOAD(
+		URI             "${VALID_GIT_URI}"
+		GIT_PATH        "./"
+		OUTPUT_PATH     "${output_path}"
+        STATUS_VAR status
+        FILE_HASH_OUTPUT_VAR hash2
+	)
+    TEST_VAR_TRUE(status)
+    TEST_VAR_NOT_EQUAL(hash hash2)
+ENDFUNCTION()
+
 
 
 SET(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_ONLY ON
@@ -59,3 +85,5 @@ SET(CMLIB_FILE_DOWNLOAD_GIT_ARCHIVE_ONLY OFF
 DOWNLOAD_AND_COMPARE(hash_archive_off ${VALID_GIT_URI_ARCHIVE})
 
 TEST_VAR_EQUAL(hash_archive_on hash_archive_off)
+
+DOWNLOAD_AND_COMPARE_DIR_FILE()
