--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -185,12 +185,11 @@ ENDFUNCTION()
 
 
 
-#DEPENDENCY_HTTP_DOWNLOAD()
-#DEPENDENCY_GIT_DOWNLOAD(ON)
-#DEPENDENCY_GIT_DOWNLOAD(OFF)
-#DEPENDENCY_INVALID_ARGUMENTS()
-#DEPENDENCY_CHECK_CACHE_AND_GET_BY_KEYWORDS()
-#DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
-DEPENDENCY_CHECK_CACHE_FILEHASH_EDGECASE()
+DEPENDENCY_HTTP_DOWNLOAD()
+DEPENDENCY_GIT_DOWNLOAD(ON)
+DEPENDENCY_GIT_DOWNLOAD(OFF)
+DEPENDENCY_INVALID_ARGUMENTS()
+DEPENDENCY_CHECK_CACHE_AND_GET_BY_KEYWORDS()
+DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
 
-#TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/duplicated_dependency")
+TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/duplicated_dependency")
