--- a/test/DEPENDENCY/CMakeLists.txt
+++ b/test/DEPENDENCY/CMakeLists.txt
@@ -192,4 +192,4 @@ DEPENDENCY_INVALID_ARGUMENTS()
 DEPENDENCY_CHECK_CACHE_AND_GET_BY_KEYWORDS()
 DEPENDENCY_CHECK_CACHE_PATH_WITHOUT_KEYWORDS()
 
-TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/duplicated_dependency")
+TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/cache_control")
