--- a/test/DEPENDENCY/cache_control/same_file_diff_remotes/CMakeLists.txt
+++ b/test/DEPENDENCY/cache_control/same_file_diff_remotes/CMakeLists.txt
@@ -14,7 +14,7 @@ ENDIF()
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../../../")
 FIND_PACKAGE(CMLIB)
 
-SET(GIT_DOWNLOAD_URI_A "${CMLIB_REQUIRED_ENV_REMOTE_URL}/cmakelib-test.git")
+SET(GIT_DOWNLOAD_URI_A "git@github.com:cmakelib/cmakelib-test.git")
 SET(GIT_DOWNLOAD_URI_B "https://gitlab.com/cmakelib/cmakelib-test.git")
 
 
