--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,17 +38,10 @@ jobs:
     container:
         image: cmakelib/build-linux:${{ matrix.image }}
     steps:
-      - name: Install SSH key GITLAB
+      - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.GITLAB }}
-          name: id_rsa # optional
-          known_hosts: ${{ secrets.GITLAB_KNOWN_HOSTS }}
-          if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - name: Install SSH key GITHUB
-        uses: shimataro/ssh-key-action@v2
-        with:
-          key: ${{ secrets.GITHUB }}
+          key: ${{ secrets.SSHKEY }}
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
