--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,8 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v2
+        run: |
+            git remote add origin ${{ github.repository }}
       - name: Run tests
         run: |
             cd test/ && cmake -DCMLIB_DEBUG=ON .
@@ -46,6 +48,9 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v2
+      - name: Add origin
+        run: |
+            git remote add origin ${{ github.repository }}
       - name: Run tests
         run: |
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
