--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,8 @@ jobs:
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Add origin
         run: |
             git remote add origin ${{ github.repository }}
       - name: Run tests
@@ -47,7 +48,7 @@ jobs:
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Add origin
         run: |
             git remote add origin ${{ github.repository }}
@@ -65,7 +66,7 @@ jobs:
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Run tests
         run: cd test && cmake -DCMLIB_DEBUG=ON .
 
@@ -79,7 +80,7 @@ jobs:
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Run tests
         run: cd test && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
@@ -107,7 +108,7 @@ jobs:
           name: id_rsa # optional
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Run tests
         run: cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
   
