--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
   test_linux:
     strategy:
       matrix:
-        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804"]
+        image: ["latest-debian-bullseye", "latest-ubuntu-2004", "latest-ubuntu-2204"]
     runs-on: ubuntu-latest
     container:
         image: koudis/cmakelib-build-linux:${{ matrix.image }}
@@ -28,12 +28,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
+            git remote add origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
   test_linux_script:
     strategy:
       matrix:
-        image: ["latest-debian-buster", "latest-ubuntu-2004", "latest-ubuntu-1804" ]
+        image: ["latest-debian-bullseye", "latest-ubuntu-2004", "latest-ubuntu-2204"]
     runs-on: ubuntu-latest
     container:
         image: koudis/cmakelib-build-linux:${{ matrix.image }}
@@ -48,6 +49,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
+            git remote add origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_macos_11:
