--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
+            git config --global --add safe.directory /__w/cmakelib/cmakelib
             git remote add origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
@@ -49,6 +50,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
+            git config --global --add safe.directory /__w/cmakelib/cmakelib
             git remote add origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
