--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,6 +26,7 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
+        set-safe-directory: true
       - name: Run tests
         run: |
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
@@ -47,6 +48,7 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
+        set-safe-directory: true
       - name: Run tests
         run: |
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
