--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,8 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
-        set-safe-directory: true
+        with:
+          set-safe-directory: true
       - name: Run tests
         run: |
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
@@ -48,7 +49,8 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
-        set-safe-directory: true
+        with:
+          set-safe-directory: true
       - name: Run tests
         run: |
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
