--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,10 +26,9 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
-        with:
-          set-safe-directory: true
       - name: Run tests
         run: |
+            git config --global --add safe.directory /__w/cmakelib/cmakelib
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
@@ -49,10 +48,9 @@ jobs:
           known_hosts: ${{ secrets.KNOWN_HOSTS }}
           if_key_exists: fail # replace / ignore / fail; optional (defaults to fail)
       - uses: actions/checkout@v3
-        with:
-          set-safe-directory: true
       - name: Run tests
         run: |
+            git config --global --add safe.directory /__w/cmakelib/cmakelib
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
