--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
-            git config --global --add safe.directory /__w/cmakelib/cmakelib
+            git config --global --add safe.directory $(pwd)
             git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
@@ -50,8 +50,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
-            git config --global --add safe.directory /__w/cmakelib/cmakelib
-            git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
+            git config --global --add safe.directory $(pwd)
+            git remote set-url origin "${{ env.GITHUB_SERVER_URL }}/cmakelib/cmakelib.git"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_macos_11:
