--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,8 +28,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
-            git config --global --add safe.directory $(pwd)
-            git remote set-url origin "https://github.com/cmakelib/cmakelib.git"
+            git config --global --add safe.directory "$(pwd)"
+            git remote set-url origin "${{ env.GITHUB_SERVER_URL }}/${{ github.repository }}"
             cd test/ && cmake -DCMLIB_DEBUG=ON .
             
   test_linux_script:
@@ -50,8 +50,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run tests
         run: |
-            git config --global --add safe.directory $(pwd)
-            git remote set-url origin "${{ env.GITHUB_SERVER_URL }}/cmakelib/cmakelib.git"
+            git config --global --add safe.directory "$(pwd)"
+            git remote set-url origin "${{ env.GITHUB_SERVER_URL }}/${{ github.repository }}"
             cd test/ && cmake -DCMLIB_DEBUG=ON -P ./CMakeLists.txt
 
   test_macos_11:
